--- a/src/Pages/SearchPage/SearchPage.css
+++ b/src/Pages/SearchPage/SearchPage.css
@@ -6,7 +6,7 @@
   }
 .SearchHeader{
     color: white;
-    font-family: 'Inter';
+    font-family: 'InterBold';
     font-style: normal;
     font-weight: 1000;
     font-size: 36px;
@@ -197,7 +197,7 @@
 
 .searchResults{
 color: white;
-font-family: 'Inter';
+font-family: 'InterBold';
 font-style: normal;
 font-weight: 1000;
 font-size: 36px;
