--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -32,8 +32,7 @@
   margin: 10px;
   max-width: 20%;
   min-width: 20%;
-  min-height: 670px;
-  max-height:670px;
+  max-height: 10vw;
   border-radius: 5px;
   position: relative;
   position: sticky;
