--- a/src/Components/forgotPassword/ForgetPassword.css
+++ b/src/Components/forgotPassword/ForgetPassword.css
@@ -12,6 +12,13 @@ body {
     background: #35363a;
 }
 
+.page-logo {
+    position: absolute; 
+    top: 10px; 
+    left: 10px; 
+    width: 250px; 
+}
+
 .wrapper {
     width: 420px;
     background: transparent;
