Made changes based on feedback

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,13 @@ display: flex;
 width: 100%;
 justify-content:space-between;
 }
+
+.logo_name_left > img {
+  max-width: 70%;
+  margin-left: 15%;
+}
+
+
 .logo{
   margin-left: 10%;
 }
