--- a/src/Pages/ForgetPassword/ForgetPassword.css
+++ b/src/Pages/ForgetPassword/ForgetPassword.css
@@ -1,22 +1,22 @@
 
 
-.wrapper {
+.wrapper11 {
     width: 420px;
-    background: transparent;
+    background: rgb(53, 54, 58);
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(169, 20, 252, 0.3);
+    box-shadow: 0 0 10px rgba(90, 101, 234, 0.3);
     color: #fff;
     border-radius: 10px;
     padding: 30px 40px;
 }
 
-.wrapper h1 {
+.wrapper11 h1 {
     font-size: 28px;
     text-align: center;
 }
 
-.wrapper .input-box {
+.wrapper11 .input-box {
     position: relative;
     width: 100%;
     height: 50px;
@@ -48,7 +48,7 @@
     font-size: 20px;
 }
 
-.wrapper .btn {
+.wrapper11 .btn11 {
     width: 100%;
     height: 45px;
     background: #5A65EA;
@@ -62,28 +62,36 @@
     font-weight: 600;
 }
 
-.wrapper .btn:hover {
-    background-color: #555b9f;
+.wrapper11 .btn11:hover {
+    opacity: 0.5;
 }
 
-.wrapper .btn2 {
+.wrapper11 .btn11 {
     width: 100%;
-    height: 30px;
-    background: #515359;
+    height: 45px;
+    background: #5A65EA;
     border: none;
     outline: none;
     border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
-    font-size: 14px;
-    color: white;
+    font-size: 16px;
+    color: #fff;
     font-weight: 600;
 }
 
-.wrapper .sendAgain {
+.wrapper11 .sendAgain {
     text-align: center;
     text-decoration: underline;
     padding-top: 5px;
     padding-bottom: 5px;
     font-size: 15px;
+}
+
+.wrapper11 .input-box input:focus::placeholder {
+    color: transparent;
+}
+
+.input-box input:focus {
+    border-color: #ffffff; 
 }
