--- a/src/Pages/ForgetPassword/ForgetPassword.css
+++ b/src/Pages/ForgetPassword/ForgetPassword.css
@@ -3,7 +3,7 @@
 .wrapper11 {
     width: 420px;
     background: rgb(53, 54, 58);
-    border: 2px solid rgba(255, 255, 255, .2);
+    border: 1px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px rgba(90, 101, 234, 0.3);
     color: #fff;
@@ -95,3 +95,19 @@
 .input-box input:focus {
     border-color: #ffffff; 
 }
+
+.back-button {
+    position: absolute;
+    left: 30px; 
+    top: 30px; 
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+  }
+  
+  .back-button img {
+    width: 35px; 
+    margin-right: 5px;
+  }
