--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -34,8 +34,8 @@ body {
 
 .wrapper9 {
     width: 420px;
-    background: rgb(53, 54, 58);
-    border: 2px solid rgba(255, 255, 255, .2);
+    background: rgba(53, 54, 58, 1);
+    border: 1px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px rgba(90, 101, 234, 0.3);
     color: #fff;
