--- a/src/Pages/NewUser/NewUser.css
+++ b/src/Pages/NewUser/NewUser.css
@@ -2,7 +2,7 @@
 .wrapper10 {
     width: 420px;
     background: rgb(53, 54, 58);
-    border: 2px solid rgba(255, 255, 255, .2);
+    border: 1px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px rgba(90, 101, 234, 0.3);
     color: #fff;
@@ -71,3 +71,19 @@
 .input-box input:focus {
     border-color: #ffffff; 
 }
+
+.back-button1 {
+    position: absolute;
+    left: 20px; 
+    top: 30px; 
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+  }
+  
+  .back-button1 img {
+    width: 35px; 
+    margin-right: 5px;
+  }
