--- a/src/Pages/ForgetPassword/ForgetPassword.css
+++ b/src/Pages/ForgetPassword/ForgetPassword.css
@@ -1,4 +1,9 @@
-
+.page-logo {
+    position: absolute; 
+    top: 10px; 
+    left: 10px; 
+    width: 250px; 
+}
 
 .wrapper11 {
     width: 420px;
@@ -81,11 +86,17 @@
 }
 
 .wrapper11 .sendAgain {
-    text-align: center;
+    width: 100%;
+    height: 45px;
+    background: transparent;
+    border: none;
+    outline: none;
     text-decoration: underline;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    font-size: 15px;
+    cursor: pointer;
+    font-size: 14px;
+    color: #fff;
+    font-weight: 400;
+
 }
 
 .wrapper11 .input-box input:focus::placeholder {
