--- a/src/Pages/ForgetPassword/ForgetPassword.css
+++ b/src/Pages/ForgetPassword/ForgetPassword.css
@@ -94,7 +94,7 @@
     text-decoration: underline;
     cursor: pointer;
     font-size: 14px;
-    color: #fff;
+    color: rgba(255, 255, 255, .75);
     font-weight: 400;
 
 }
