--- a/src/Pages/ForgetPassword/ForgetPassword.css
+++ b/src/Pages/ForgetPassword/ForgetPassword.css
@@ -1,18 +1,18 @@
 .page-logo {
     position: absolute; 
-    top: 10px; 
-    left: 10px; 
+    top: 25px; 
+    left: 25px; 
     width: 250px; 
 }
 
 .wrapper11 {
     width: 420px;
     background: rgb(53, 54, 58);
-    border: 1px solid rgba(255, 255, 255, .2);
+    border: 1px solid rgba(255, 255, 255, 1);
     backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(90, 101, 234, 0.3);
+    box-shadow: 0 0 10px rgba(90, 101, 234, 1);
     color: #fff;
-    border-radius: 10px;
+    
     padding: 30px 40px;
 }
 
@@ -85,6 +85,20 @@
     font-weight: 600;
 }
 
+.wrapper11 .sendCode {
+    width: 100%;
+    height: 45px;
+    background: rgb(53, 54, 58);
+    border: 2px solid rgba(255, 255, 255, 1);
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: white;
+    font-weight: 600;
+}
+
 .wrapper11 .sendAgain {
     width: 100%;
     height: 45px;
@@ -109,7 +123,7 @@
 
 .back-button {
     position: absolute;
-    left: 30px; 
+    left: 0px; 
     top: 30px; 
     background: none;
     border: none;
