--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -21,8 +21,8 @@ body {
 
 .page-logo {
     position: absolute; 
-    top: 10px; 
-    left: 10px; 
+    top: 25px; 
+    left: 25px; 
     width: 250px; 
 }
 
@@ -35,11 +35,11 @@ body {
 .wrapper9 {
     width: 420px;
     background: rgba(53, 54, 58, 1);
-    border: 1px solid rgba(255, 255, 255, .2);
+    border: 1px solid rgba(255, 255, 255, 0);
     backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(90, 101, 234, 0.3);
+    box-shadow: 0 0 10px rgba(90, 101, 234, 0);
     color: #fff;
-    border-radius: 10px;
+    
     padding: 30px 40px;
 }
 .wrapper9 h1 {
@@ -132,3 +132,52 @@ body {
 .input-box input:focus {
     border-color: #ffffff; 
 }
+
+
+.checkbox-label {
+    position: relative;
+    display: flex;
+    align-items: center;
+    color: #fff; 
+    margin-left: 5px; 
+    cursor: pointer;
+  }
+  
+  .checkBox {
+    opacity: 0;
+    position: absolute;
+  }
+  
+ 
+  .custom-checkbox {
+    width: 17.5px; 
+    height: 17.5px; 
+    background-color: rgba(53, 54, 58, 1);
+    border: 1px solid #fff; 
+    margin-right: 10px; 
+    transition: background-color 0.3s, border-color 0.3s; 
+    border-radius: 2.5px;
+  }
+  
+
+  .checkBox:checked + .custom-checkbox {
+    background-color: rgba(53, 54, 58, 1); 
+    border-color: #fff; 
+  }
+  
+  
+  .custom-checkbox::after {
+    content: '\2713';
+    position: absolute;
+    top: 46%;
+    left: 7%;
+    transform: translate(-50%, -50%);
+    font-size: 14px;
+    color: #fff; 
+    opacity: 0; 
+    transition: opacity 0.3s; 
+  }
+  
+  .checkBox:checked + .custom-checkbox::after {
+    opacity: 1;
+  }
