--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -222,6 +222,7 @@
   font-size: 12px;
 }
 
+
 .dropdown:hover .dropdown-content {
   display: block;
   margin-top: 2px;
@@ -255,6 +256,11 @@
   font-weight: 800;
   font-size: 16px;
   letter-spacing: 0.12em;
+}
+.submitButton:hover {
+  background: #575fbe;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
 }
 
 .newQustion {
