--- a/src/App.css
+++ b/src/App.css
@@ -6,23 +6,20 @@
   background-color: rgb(35, 36, 40);
 }
 
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-.maincontainer{
-  background-color: rgb(35, 36, 40);
-  padding: 1px;
-  display: flex;
-  height: 100px;
-}
+
 .Leftcontainer{
   background-color: rgb(53, 54, 58);
   margin: 10px;
   width: 20%;
   min-height: 100vh;
   border-radius: 5px;
-  position: relative;
+  position: sticky;
 
 }
 .logo_name_left{
@@ -101,14 +98,7 @@ color: white;
   color: white;
 
 }
-.submitAQuestionContainer{
-background-color: rgb(53, 54, 58);
-width: 100%;
-height: 200px;
-margin-top: 10px;
-margin-right: 10px;
-border-radius: 5px;
-}
+
 .submitAQuestionHeader{
 color: white;
 font-weight: bolder;
@@ -174,88 +164,9 @@ color: white;
   margin-left: 20px;
   margin-bottom: 3px;
 }
-.menubox{
-  display: flex;
-  padding: -1px;
-}
 
-.submitButton{
-  background-color:  rgb(53, 54, 58);
-  color: white;
-  border: 1px solid white;
-  vertical-align: text-top;
-  margin-left: auto;
-  margin-top: 5px;
-}
-.newQustion{
-  color: white;
-  font-weight: bolder;
-    margin-top: 40px;
-    margin-left: 10px;
-    margin-bottom: 10px;
-}
-.newQustionBox{
-  border: 1px solid white;
-  border-radius: 5px;
-  width: 80%;
-  margin-left: 10%;
-  margin-bottom: 20px;
-}
 
-.newQustionHeader{
-  display: flex;
-  color: white;
-  justify-content: space-between;
-  margin-left: 25px;
-  margin-right: 25px;
-  margin-bottom: 10px;
-  margin-top: 10px;
-}
-.Headline{
-}
-.smallUserLogo2{
-  background-color: rgb(90, 101, 234);
-  border: 1px solid white; 
-  width: 10px;
-  height: 10px;
-  border-radius: 100px;
-  margin-right: 10px;
-}
-.username{
 
-}
-.userQ{
-  display: flex;
-  align-items: center; 
-}
-.newQuestionBody{
-  border: 1px solid white;
-  border-radius: 5px;
-  width: 90%;
-  margin-left: 5%;
-  height: 100px;
-  margin-bottom: 10px;
-}
-.newQuestionBodyText{
-  color: white;
-  margin-left: 5px;
-}
-.newQuestionTags{
-  color: white;
-  display: flex;
-  width: 90%;
-  margin-left: 5%;
-  margin-bottom: 10px;
-}
-.NQtag{
-border: 1px solid white;
-border-radius: 30px;
-margin-right: 20px;
-padding-left: 30px;
-padding-right: 30px;
-padding-top: 2px;
-padding-bottom:2px ;
-}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
