--- a/src/Pages/ForgetPassword/ForgetPassword.css
+++ b/src/Pages/ForgetPassword/ForgetPassword.css
@@ -4,6 +4,14 @@
     left: 25px; 
     width: 250px; 
 }
+.forgot_bg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-height: 100vh;
+    background: #35363a;
+}
 
 .wrapper11 {
     width: 420px;
@@ -21,16 +29,16 @@
     text-align: center;
 }
 
-.wrapper11 .input-box {
+.wrapper11 .input-box3 {
     position: relative;
     width: 100%;
     height: 50px;
     margin: 30px 0;
 }
 
-.input-box input {
-    width: 100%;
-    height: 100%;
+.input-box3 input {
+    width: 80%;
+    height: 10px;
     background: transparent;
     border: none;
     outline: none;
@@ -41,11 +49,11 @@
     padding: 20px 45px 20px 20px;
 }
 
-.input-box input::placeholder {
+.input-box3 input::placeholder {
     color: #fff;
 }
 
-.input-box i {
+.input-box3 i {
     position: absolute;
     right: 20px;
     top: 50%;
@@ -113,11 +121,11 @@
 
 }
 
-.wrapper11 .input-box input:focus::placeholder {
+.wrapper11 .input-box3 input:focus::placeholder {
     color: transparent;
 }
 
-.input-box input:focus {
+.input-box3 input:focus {
     border-color: #ffffff; 
 }
 
