--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -34,7 +34,6 @@
   min-width: 20%;
   max-height: 10vw;
   border-radius: 5px;
-  position: relative;
   position: sticky;
   top: 5px;
   margin-bottom: 20px;
@@ -145,6 +144,7 @@
   height: 200px;
   margin-top: 10px;
   margin-right: 10px;
+  border-radius: 5px;
 
 }
 
@@ -237,17 +237,17 @@
 }
 
 .menubox {
-  display: flex;
   padding: -1px;
+  display: flex;
 }
 
 .submitButton {
   background: #5A65EA;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border: 1px solid white;
   border-radius: 5px;
   width: 120px;
   color: white;
-  border: none;
   margin-left: auto;
   margin-top: 5px;
   font-family: 'Inter';
@@ -271,8 +271,6 @@
 .newQustionBox {
   border: 1px solid white;
   border-radius: 5px;
-  width: 80%;
-  margin-left: 10%;
   margin-bottom: 20px;
 }
 
