--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -5,17 +5,13 @@
     width: 100%;
     z-index: 1;
 }
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-body {
+.login_bg {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    width: 100%;
     background: #35363a;
 }
 
@@ -46,15 +42,14 @@ body {
     font-size: 36px;
     text-align: center;
 }
-.wrapper9 .input-box{
+.wrapper9 .input-box1{
     position: relative;
-    width: 100%;
-    height: 50px;
+    
     margin: 30px 0;
 }
-.input-box input {
-    width: 100%;
-    height: 100%;
+.input-box1 input {
+    width: 80%;
+    height: 10px;
     background: transparent;
     border: none;
     outline: none;
@@ -65,11 +60,11 @@ body {
     padding: 20px 45px 20px 20px;
     transition: border-color 0.3s, color 0.3s;
 }
-.input-box input::placeholder {
+.input-box1 input::placeholder {
     color: #fff;
     
 }
-.input-box i {
+.input-box1 i {
     position: absolute;
     right: 20px;
     top: 50%;
@@ -125,11 +120,11 @@ body {
 .register-link p a:hover {
     text-decoration: underline;
 }
-.wrapper9 .input-box input:focus::placeholder {
+.wrapper9 .input-box1 input:focus::placeholder {
     color: transparent;
 }
 
-.input-box input:focus {
+.input-box1 input:focus {
     border-color: #ffffff; 
 }
 
