--- a/src/Pages/NewUser/NewUser.css
+++ b/src/Pages/NewUser/NewUser.css
@@ -1,3 +1,11 @@
+.newUser_bg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-height: 100vh;
+    background: #35363a;
+}
 .page-logo {
     position: absolute; 
     top: 25px; 
@@ -21,16 +29,16 @@
     text-align: center;
 }
 
-.wrapper10 .input-box {
+.wrapper10 .input-box2 {
     position: relative;
     width: 100%;
     height: 50px;
     margin: 30px 0;
 }
 
-.input-box input {
-    width: 100%;
-    height: 100%;
+.input-box2 input {
+    width: 80%;
+    height: 10px;
     background: transparent;
     border: none;
     outline: none;
@@ -41,11 +49,11 @@
     padding: 20px 45px 20px 20px;
 }
 
-.input-box input::placeholder {
+.input-box2 input::placeholder {
     color: #fff;
 }
 
-.input-box i {
+.input-box2 i {
     position: absolute;
     right: 20px;
     top: 50%;
@@ -70,11 +78,11 @@
 .wrapper10 .btn10:hover {
     opacity: 0.5;
 }
-.wrapper10 .input-box input:focus::placeholder {
+.wrapper10 .input-box2 input:focus::placeholder {
     color: transparent;
 }
 
-.input-box input:focus {
+.input-box2 input:focus {
     border-color: #ffffff; 
 }
 
