--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -244,7 +244,7 @@
 .submitButton {
   background: #5A65EA;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-  border: 1px solid white;
+  border: none;
   border-radius: 5px;
   width: 120px;
   color: white;
