--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -37,6 +37,7 @@
   position: sticky;
   top: 5px;
   margin-bottom: 20px;
+  min-height: 100vh;
 }
 
 .logo_name_left {
@@ -47,6 +48,11 @@
   width: 100%;
   justify-content: space-between;
 }
+.logo_name_left > img {
+  max-width: 70%;
+  margin-left: 15%;
+}
+
 .quickSearchBox{
   display: flex;
     justify-content: center;
@@ -115,6 +121,7 @@
   background-color: rgb(90, 101, 234);
   width: 10px;
   height: 10px;
+  border: 1px solid white; 
   border-radius: 100px;
   position: absolute;
   bottom: 0;
@@ -139,13 +146,13 @@
 }
 
 .submitAQuestionContainer {
-  background-color: rgb(53, 54, 58);
+  background-color: rgb(43, 44, 48);
   width: 100%;
-  height: 200px;
+  height: 250px;
   margin-top: 10px;
   margin-right: 10px;
   border-radius: 5px;
-
+  padding-bottom: 10px;
 }
 
 .submitAQuestionHeader {
@@ -170,29 +177,41 @@
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .inputQuestionTitle {
   background-color: rgb(53, 54, 58);
   color: white;
+  border: 1px solid white;
   width: 100%;
   border-radius: 2px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 13px;
+  padding-left: 5px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  margin-bottom: 10px;
+
 
 }
 
 .inputPlaintext {
   background-color: rgb(53, 54, 58);
   color: white;
+  border: 1px solid white;
   width: 100%;
   padding-bottom: 50px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
+  padding-left: 5px;
+  padding-top: 5px;
+  margin-bottom: 5px;
 }
 
 .dropdown {
@@ -239,6 +258,7 @@
 .menubox {
   padding: -1px;
   display: flex;
+  padding-top: 10px;
 }
 
 .submitButton {
