--- a/src/Components/CodeBlock.css
+++ b/src/Components/CodeBlock.css
@@ -10,7 +10,7 @@
     margin-bottom: 10px;
     overflow-y: auto;
     max-width: 1100px;
-
+    color:white
 }
 
 .code::-webkit-scrollbar {
@@ -69,7 +69,7 @@
     margin-bottom: 10px;
     overflow-y: auto;
     max-width: 810px;
-
+    color:white;
 }
 
 .smallCode::-webkit-scrollbar {
