--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -205,6 +205,7 @@
   border: 1px solid white;
   width: 100%;
   padding-bottom: 50px;
+  border-radius: 2px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -212,6 +213,7 @@
   padding-left: 5px;
   padding-top: 5px;
   margin-bottom: 5px;
+  resize: none;
 }
 
 .dropdown {
