--- a/src/Pages/ForgetPassword/ForgetPassword.css
+++ b/src/Pages/ForgetPassword/ForgetPassword.css
@@ -107,6 +107,10 @@
     font-weight: 600;
 }
 
+.wrapper11 .sendCode:hover {
+    opacity: 0.5;
+}
+
 .wrapper11 .sendAgain {
     width: 100%;
     height: 45px;
@@ -118,7 +122,10 @@
     font-size: 14px;
     color: rgba(255, 255, 255, .75);
     font-weight: 400;
+}
 
+.wrapper11 .sendAgain:hover {
+    opacity: 0.5;
 }
 
 .wrapper11 .input-box3 input:focus::placeholder {
@@ -132,7 +139,7 @@
 .back-button {
     position: absolute;
     left: 0px; 
-    top: 30px; 
+    top: 50px; 
     background: none;
     border: none;
     cursor: pointer;
