--- a/src/Pages/Answerpage/Answerpage.css
+++ b/src/Pages/Answerpage/Answerpage.css
@@ -145,10 +145,11 @@
   
   }
   
-  .commentContainer {
+  .QuestionDescriptionContainer {
+    position: absolute;
     background-color: rgb(43, 44, 48);
-    width: 100%;
-    height: 200px;
+    width: 1180px;
+    height: 180px;
     margin-top: 50px;
     margin-right: 10px;
     border-radius: 5px;
