minor style changes

--- a/src/Pages/Answerpage/Answerpage.css
+++ b/src/Pages/Answerpage/Answerpage.css
@@ -158,7 +158,7 @@
   
   .submitCommentContainer {
     background-color: rgb(43, 44, 48);
-    width: 100%;
+    width: 1180px;
     height: 250px;
     margin-right: 10px;
     border-radius: 5px;
