--- a/src/Pages/Answerpage/Answerpage.css
+++ b/src/Pages/Answerpage/Answerpage.css
@@ -332,11 +332,11 @@
     align-items: center;
   }
   
-  .newQuestionBody {
+  .Answerpage .newQuestionBody {
     border-radius: 5px;
     width: 90%;
     margin-left: 5%;
-    height: 105px;
+    height: 250px;
     margin-bottom: 10px;
   }
   
