--- a/src/Pages/Answerpage/Answerpage.css
+++ b/src/Pages/Answerpage/Answerpage.css
@@ -424,3 +424,30 @@
     margin-left: 10px;
     margin-bottom: 10px
   }
+
+.aCommentBox {
+  border: 1px solid white;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.aCommentHeader{
+  display: flex;
+  color: white;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 90%;
+  margin-left: 5%;
+}
+
+.aCommentBody {
+  border-radius: 5px;
+  width: 90%;
+  margin-left: 5%;
+  height: 200px;
+  margin-bottom: 10px;
+}
+
+
+
