--- a/src/Components/CodeBlock.css
+++ b/src/Components/CodeBlock.css
@@ -12,6 +12,18 @@
     max-width: 1100px;
     color:white
 }
+.code:hover {
+  padding-top: 5px;
+  padding-left: 5px;
+  padding-bottom: -5px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  overflow-y: auto;
+  max-width: 1100px;
+  color:white;
+  min-height: 100px;
+  height: max-content;
+}
 
 .code::-webkit-scrollbar {
     width: 8px;
@@ -70,6 +82,18 @@
     overflow-y: auto;
     max-width: 810px;
     color:white;
+}
+.smallCode:active {
+  padding-top: 5px;
+  padding-left: 5px;
+  padding-bottom: -5px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  overflow-y: auto;
+  max-width: 1100px;
+  color:white;
+  min-height: 100px;
+  height: max-content;
 }
 
 .smallCode::-webkit-scrollbar {
