--- a/src/Components/LogoutButton.css
+++ b/src/Components/LogoutButton.css
@@ -1,22 +1,19 @@
 .logoutContainer {
-    position: absolute;
-    bottom: 120px;
-    left: 105px;
-    border: 2px solid white;
-    border-radius: 10px;
-  }
-  
-  .logoutContainer .logout-button {
-    background-color: transparent;
-    color: white;
-    font-size: 16px;
-    padding: 10px 15px;
-    border: none;
-    cursor: pointer;
-    transition: border-width 0.3s ease;
-  }
-  
-  .logoutContainer .logout-button:hover {
-    border-width: 4px; /* Double the border width on hover */
-  }
-  
+  position: absolute;
+  bottom: 2.5%;
+  right: 33.5%; /* Adjust the right distance as needed */
+  transform: translateY(-50%);
+  border: 2px solid white;
+  border-radius: 10px;
+}
+
+.logoutContainer .logout-button {
+  background-color: transparent;
+  color: white;
+  font-size: 16px;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+  transition: border-width 0.3s ease;
+}
+
