--- a/src/Components/LikeDislike.css
+++ b/src/Components/LikeDislike.css
@@ -1,4 +1,5 @@
-.LikeDislikeButton{
+
+.LikeDislikeButton {
     background-color: rgb(81, 83, 89);
     color:white;
     display: flex;
@@ -6,7 +7,16 @@
     width: 12%;
     padding: 6px;
     border-radius: 20px;
-}
+  }
+  
+  .likeIcon.clicked2 {
+    color: rgb(90, 101, 234); 
+  }
+  
+  .DislikeIcon.clicked2 {
+    color: rgb(90, 101, 234);
+  }
+  
 .likeButton{
     display: flex;
 }
@@ -24,4 +34,46 @@
 
 .DislikeButton{
     display: flex;
+}
+
+
+.LikeDislikeButtonNC{
+    background-color: rgb(81, 83, 89);
+    color:white;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 20px;
+}
+.likeButtonNC{
+    display: flex;
+}
+.likeIconNC{
+    transform: scaleX(-1);
+    padding-left: 5px;
+    margin-top: 1px;
+}
+.likeCountNC{
+    padding-right: 10px;
+}
+
+.DislikeIconNC{
+    transform: scaleX(-1);
+    padding-right: 10px; 
+    margin-top: 1px;
+}
+
+.DislikeButtonNC{
+    display: flex;
+}
+.DislikeCountNC{
+    padding-left: 5px;
+}
+
+.likeDislike-button-notCLick-container {
+    display: flex;
+    margin-left: auto;
+    height: 22px;
 }
