--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -147,12 +147,13 @@
 
 .submitAQuestionContainer {
   background-color: rgb(43, 44, 48);
-  width: 100%;
+  width: 98%;
   height: 250px;
+  margin-left: 10px;
   margin-top: 10px;
   margin-right: 10px;
   border-radius: 5px;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
 }
 
 .submitAQuestionHeader {
@@ -310,7 +311,7 @@
   font-weight: 800;
   font-size: 36px;
   margin-top: 40px;
-  margin-left: 10px;
+  margin-left: 5%;
   margin-bottom: 10px;
 }
 
