--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -535,6 +535,7 @@ margin-top: 5px;
     font-weight: 1000;
     font-size: 36px;
     margin-top: 10px;
+    margin-bottom: 20px;
     margin-left: 10px;   
 }
 .myAnswerBox{
