--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -176,3 +176,13 @@
   .checkBox:checked + .custom-checkbox::after {
     opacity: 1;
   }
+
+
+  .login-error {
+    color: #ff0000; 
+    background-color: #fff4f4; 
+    padding: 10px; 
+    margin-top: 20px;
+    border-radius: 5px; 
+    text-align: center;
+  }
