--- a/src/Pages/Answerpage/Answerpage.css
+++ b/src/Pages/Answerpage/Answerpage.css
@@ -156,7 +156,7 @@
     margin-top: 50px;
     margin-right: 10px;
     border-radius: 5px;
-    padding-bottom: 10px;
+    /* padding-bottom: 5px; */
   }
   
   .submitCommentContainer {
@@ -166,8 +166,8 @@
     margin-right: 10px;
     border-radius: 5px;
     padding-bottom: 10px;
-    bottom: 18px;
     margin-left: 5%;
+    margin-top:30px
   }
 
 
@@ -401,6 +401,7 @@
   
   .recentQuestionsLabel {
     color: white;
+    font-family: 'InterBold';
     font-size: 20px;
     position: absolute; 
     top:  36px; 
@@ -422,7 +423,7 @@
     font-style: normal;
     font-weight: 800;
     font-size: 28px;
-    margin-top: 12px;
+    margin-top: 20px;
     margin-left: 10px;
     margin-bottom: 8px
   }
