--- a/src/Pages/Answerpage/Answerpage.css
+++ b/src/Pages/Answerpage/Answerpage.css
@@ -263,6 +263,7 @@
     border: none;
     border-radius: 5px;
     width: 120px;
+    height: 25px;
     color: white;
     font-family: 'Inter';
     font-style: normal;
@@ -270,6 +271,7 @@
     font-size: 16px;
     letter-spacing: 0.12em;
     margin-left: 85%;
+    margin-top: 6px
 
   }
 
