--- a/src/Components/LogoutButton.css
+++ b/src/Components/LogoutButton.css
@@ -1,7 +1,7 @@
 .logoutContainer {
   position: absolute;
   bottom: 2.5%;
-  right: 33.5%; /* Adjust the right distance as needed */
+  right: 35%;
   transform: translateY(-50%);
   border: 2px solid white;
   border-radius: 10px;
