--- a/src/Components/CodeBlock.css
+++ b/src/Components/CodeBlock.css
@@ -113,3 +113,9 @@
 .smallCode::-webkit-scrollbar-corner {
     background-color: rgb(67, 68, 73);
   }
+
+.dateOfComment {
+  opacity: 75%;
+  align-self:flex-start;
+  font-size: 13px;
+}
