--- a/src/Pages/Answerpage/Answerpage.css
+++ b/src/Pages/Answerpage/Answerpage.css
@@ -417,6 +417,7 @@
     border-radius: 5px;
     padding-bottom: 10px;
     margin-left: 5%;
+    margin-top: 28px
   }
 
   .previousAnswerHeader {
