--- a/src/Components/CodeBlock.css
+++ b/src/Components/CodeBlock.css
@@ -118,4 +118,8 @@
   opacity: 75%;
   align-self:flex-start;
   font-size: 13px;
+  font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
 }
