--- a/src/Components/CommentButton.css
+++ b/src/Components/CommentButton.css
@@ -17,4 +17,8 @@
 .comment-count{
     color:white;
     margin-left: 10px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
 }
