--- a/src/Components/LogoutButton.css
+++ b/src/Components/LogoutButton.css
@@ -11,8 +11,6 @@
 
 .logoutContainer .logout-button {
   background-color: transparent;
-  color: white;
-  font-size: 12px;
   padding: 10px 15px;
   border: none;
   cursor: pointer;
@@ -20,6 +18,11 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  color: white;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
 }
 
 .logoutIcon {
