--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -66,6 +66,10 @@
   height: 25px;
   text-align: center;
   margin-top: 10px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
 }
 
 .logo {
@@ -107,15 +111,7 @@
   /* Center horizontally */
 }
 
-.userLogo {
-  background-color: rgb(90, 101, 234);
-  border: 2px solid rgb(58, 60, 82);
-  width: 50px;
-  height: 50px;
-  border-radius: 100px;
-  position: absolute;
-  top: 50%;
-}
+
 
 .userLogoContainer {
   position: absolute;
@@ -207,7 +203,7 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  font-size: 13px;
+  font-size: 12px;
   padding-left: 5px;
   padding-bottom: 5px;
   padding-top: 5px;
@@ -348,7 +344,7 @@
 }
 
 .Headline {
-  font-family: 'Inter';
+  font-family: 'InterBold';
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
@@ -368,12 +364,18 @@
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
+  cursor: pointer;
 
 }
 
 .userQ {
   display: flex;
   align-items: center;
+  font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    cursor: pointer;
 }
 
 .newQuestionBody {
