--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -59,6 +59,10 @@
     color: white;
     padding: 20px 45px 20px 20px;
     transition: border-color 0.3s, color 0.3s;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
 }
 .input-box1 input::placeholder {
     color: #fff;
@@ -85,6 +89,10 @@
 .remember-forgot a {
     color: #ffffff;
     text-decoration: none;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
 }
 .remember-forgot a:hover {
     text-decoration: underline;
@@ -98,9 +106,11 @@
     border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
-    font-size: 16px;
     color: #fff;
+    font-family: 'Inter';
+    font-style: normal;
     font-weight: 600;
+    font-size: 16px;
 }
 .wrapper9 .btn9:hover {
    opacity: 0.5;
@@ -136,6 +146,10 @@
     color: #fff; 
     margin-left: 5px; 
     cursor: pointer;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
   }
   
   .checkBox {
