--- a/src/Pages/SearchPage/SearchPage.css
+++ b/src/Pages/SearchPage/SearchPage.css
@@ -8,7 +8,7 @@
     color: white;
     font-family: 'InterBold';
     font-style: normal;
-    font-weight: 1000;
+    font-weight: 800;
     font-size: 36px;
     display: flex;
     width: 100%;
@@ -180,8 +180,13 @@
     border: none;
     padding: 5px;
     padding-left: 10px;
-    color: white;
+  
     margin-bottom: 30px;
+    color: white;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
 }
 .searchResultsbox{
     background-color: rgb(43, 44, 48);
@@ -200,7 +205,7 @@
 color: white;
 font-family: 'InterBold';
 font-style: normal;
-font-weight: 1000;
+font-weight: 800;
 font-size: 36px;
 margin-top: 10px;
 margin-left: 20px;
