--- a/src/Components/CodeBlock.css
+++ b/src/Components/CodeBlock.css
@@ -1,6 +1,7 @@
 /* CodeBlock.css */
 
 .code {
+    width: 100% - 5px;
     padding-top: 5px;
     padding-left: 5px;
     padding-bottom: -5px;
@@ -8,7 +9,6 @@
     height: 100px;
     margin-bottom: 10px;
     overflow-y: auto;
-    max-width: 1200px;
     color:white
 }
 .code:hover {
