--- a/src/Components/CodeBlock.css
+++ b/src/Components/CodeBlock.css
@@ -1,7 +1,7 @@
 /* CodeBlock.css */
 
 .code {
-    width: 100% - 5px;
+    min-width: 100% - 5px;
     padding-top: 5px;
     padding-left: 5px;
     padding-bottom: -5px;
@@ -13,12 +13,12 @@
 }
 .code:hover {
   padding-top: 5px;
+  min-width: 100%;
   padding-left: 5px;
   padding-bottom: -5px;
   border-radius: 5px;
   margin-bottom: 10px;
   overflow-y: auto;
-  max-width: 1200px;
   color:white;
   min-height: 100px;
   height: max-content;
@@ -51,7 +51,7 @@
   }
   
   .code-input {
-    width: 100%;
+    min-width: 100%;
     height: 200px;
     padding: 10px;
     font-family: 'Courier New', monospace;
@@ -79,7 +79,7 @@
     height: 100px;
     margin-bottom: 10px;
     overflow-y: auto;
-    max-width: 810px;
+    width: 100%;
     color:white;
 }
 .smallCode:active {
@@ -89,7 +89,7 @@
   border-radius: 5px;
   margin-bottom: 10px;
   overflow-y: auto;
-  max-width: 1100px;
+  min-width: 100%;
   color:white;
   min-height: 100px;
   height: max-content;
