--- a/src/Pages/Answerpage/Answerpage.css
+++ b/src/Pages/Answerpage/Answerpage.css
@@ -244,7 +244,8 @@
     font-size: 16px;
     letter-spacing: 0.12em;
     margin-left: 85%;
-    margin-top: 6px
+    margin-top: 6px;
+    cursor: pointer;
 
   }
 
