--- a/src/Pages/Answerpage/Answerpage.css
+++ b/src/Pages/Answerpage/Answerpage.css
@@ -182,6 +182,25 @@
     resize: none;
     margin-left: 5%;
   }
+
+  .inputPlaintextAnswer::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+  
+  .inputPlaintextAnswer::-webkit-scrollbar-track {
+    background: rgb(67, 68, 73); 
+    border-radius: 20px;
+  }
+  
+  .inputPlaintextAnswer::-webkit-scrollbar-thumb {
+    background-color: rgb(0, 0, 0, 0.5); 
+    border-radius: 20px; 
+  }
+  .inputPlaintextAnswer::-webkit-scrollbar-corner {
+    background-color: rgb(67, 68, 73);
+  }
+  
   
   .dropdown {
     position: relative;
@@ -405,12 +424,11 @@
   width: 90%;
   margin-left: 5%;
 }
-
 .aCommentBody {
   border-radius: 5px;
   width: 90%;
   margin-left: 5%;
-  height: 150px;
+  /*height: 150px;*/
   margin-bottom: 10px;
   background: rgb(67, 68, 73);
   border: 1px solid white;
