--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -237,6 +237,18 @@
     cursor: pointer;
 }
 
+.profileOverviewMessages {
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: white;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    cursor: pointer;
+}
+
 .PO_PL {
     margin-right: 45px;
 }
