--- a/src/Pages/SearchPage/SearchPage.css
+++ b/src/Pages/SearchPage/SearchPage.css
@@ -210,3 +210,13 @@ font-size: 36px;
 margin-top: 10px;
 margin-left: 20px;
 }
+
+.noResultsMessage{
+    color: white;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 300;
+font-size: 18px;
+margin-top: 10px;
+margin-left: 20px;
+}
