--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -636,7 +636,7 @@ margin-top: 20px;
     background-color: rgb(81, 83, 89);
     padding: 20px;
     border: 1px solid #ccc;
-    z-index: 2;
+    z-index: 3;
     border-radius: 10px;
   }
   
@@ -655,6 +655,7 @@ margin-top: 20px;
     color: white;
     cursor: pointer;
     border: 1px solid #ccc;
+    border-radius: 5px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 300;
@@ -665,3 +666,15 @@ margin-top: 20px;
 
   }
   
+  .confirmation-modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2; /* Set z-index greater than 1 to overlay on other elements */
+  }
