--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -645,7 +645,7 @@ margin-top: 20px;
     background-color: rgb(81, 83, 89);
     padding: 20px;
     border: 1px solid #ccc;
-    z-index: 2;
+    z-index: 3;
     border-radius: 10px;
   }
   
@@ -664,6 +664,7 @@ margin-top: 20px;
     color: white;
     cursor: pointer;
     border: 1px solid #ccc;
+    border-radius: 5px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 300;
@@ -672,4 +673,17 @@ margin-top: 20px;
   .confirmation-modal button:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
+  }
+  
+  .confirmation-modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
   }
